Correction commande leaderboard + ajout classement de rôles. Ajout de la mise à jour des points de rôle au fur et à mesure